commit with added information to content pages

--- a/Technical-Hw4-NelsonNgov/Technical-Hw4-NelsonNgov/MainPage.Master
+++ b/Technical-Hw4-NelsonNgov/Technical-Hw4-NelsonNgov/MainPage.Master
@@ -1,21 +1,69 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MainPage.master.cs" Inherits="Technical_Hw4_NelsonNgov.MainPage" %>
 
 <!DOCTYPE html>
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link href="PetStyle.css" rel="stylesheet" />
 <html>
 <head runat="server">
-    <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <title>Nelson's Pet Store</title>
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
    <form id="form1" runat="server">
-        <div>
-            <h1 style="color:aqua"> This is my master page</h1>
-            <h2 style="color:orange">Inside the content place holder tag will go my content pages</h2>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+        
+         <div id="masterdiv">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <a class="navbar-brand" href="#landing">Nelson's Pet Store<span class="sr-only">(current)</span></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContentPage1.aspx">Home Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContentPage2.aspx">Dogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContentPage3.aspx">Cats</a>
+                    </li>
+                </ul>
+            </div>
+            </nav>
+
+            <div id="header">
+                 <h1> Welcome to Nelson's Pet Store!</h1>              
+                <h2>Here you can find all the pet supplies and services you will ever need</h2>
+            </div>
+
+             <div id="contentDiv1">
+                 <asp:ContentPlaceHolder ID="head" runat="server">
+                 </asp:ContentPlaceHolder>
+            </div>
+             <div id="contentDiv2">
+                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                 </asp:ContentPlaceHolder>
+             </div>
+       </div> 
+
     </form>
 </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </html>
